--- a/public/css/main.css
+++ b/public/css/main.css
@@ -95,6 +95,17 @@ main {
   margin: 0 0.25rem;
 }
 
+.cart__item {
+  margin: auto;
+  padding: 1rem;
+  text-align: center;
+  display: flex;
+  justify-self: center;
+  justify-content: space-between;
+  width: 50%;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+}
+
 .btn {
   text-decoration: none;
   font: inherit;
@@ -104,6 +115,11 @@ main {
   background: white;
   border-radius: 3px;
   cursor: pointer;
+}
+
+.btn_delete {
+  border-color: crimson !important;
+  color: crimson;
 }
 
 
