--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -17,6 +17,12 @@
                         </li>
                     <%});%>
                 </ul>
+                <hr>
+                <div class="centered">
+                    <form method="POST" action="/create-order">
+                        <button class="btn" type="submit">Order Now!</button>
+                    </form>
+                </div>
             <%} else {%>
                     <h1>No Produts in cart</h1>
             <%}%>
